--- a/src/Countries2/Countries2.css
+++ b/src/Countries2/Countries2.css
@@ -1,4 +1,4 @@
-.countries-container {
+.countries2-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,32 +20,15 @@
     flex-direction: column;
   }
   
-  .options {
+  .options-countries2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* 2 coloane egale */
     gap: 10px; /* Spațiu între butoane */
-    margin-top: 15px;
+    margin-left: 35px;
     width: 100%; /* Pentru aliniere corectă */
     max-width: 400px; /* Opțional, pentru a nu fi prea late */
 }
 
-  
-  .option-button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 1.2rem;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: 0.3s;
-  }
-  
-  .option-button:hover {
-    background-color: #0056b3;
-    border-color: #ff5733;
-    transform: scale(1.1);
-  }
   
   .result {
     text-align: center;
@@ -55,11 +38,11 @@
     margin-bottom: 15px;
   }
 
-  .countries-container h1 {
+  .countries2-container h1 {
     color: #ff5733;
 }
 
-  .countries-container h2 {
+  .countries2-container h2 {
     color: #2a9d8f;
 }
 
@@ -88,3 +71,17 @@
   background-color: #218838;
 }
 
+
+.flag-option:hover {
+    border-color: #ff5733;
+    transform: scale(1.1);
+}
+
+.flag-option {
+    width: 120px;
+    height: 80px;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
